[COMMON] SCD-26: fixing background problem when the textarea overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,7 +106,7 @@ body::-webkit-scrollbar-track {
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
+  --background: #0B1120;
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
